--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     apply from: 'version.gradle'
 
     addRepos(repositories)
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+
     dependencies {
         classpath deps.gradle.gradle
         classpath deps.main.kotlin_version
@@ -14,6 +18,10 @@ buildscript {
 }
 
 allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+
     addRepos(repositories)
 }
 
