fix file Chooser

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion(33)
+    compileSdkVersion(30)
+    buildToolsVersion("30.0.3")
 
     defaultConfig {
-        applicationId "com.hsa.pharoma"
+        applicationId "com.arad.aview"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
