--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion(30)
-    buildToolsVersion("30.0.3")
+    compileSdkVersion(33)
 
     defaultConfig {
-        applicationId "com.arad.aview"
+        applicationId "com.hsa.pharoma"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
