--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ plugins {
 }
 
 android {
-    compileSdkVersion(33)
+
+    compileSdk(33)
 
     defaultConfig {
         applicationId "com.hsa.pharoma"
